@@ -1,5 +1,5 @@
 # FLa4a
-- Version: 1.5.2
+- Version: 1.5.4
 - Date: 2018-07-19
 - Author: Colin P. Millar and Ernesto Jardim
 - Maintainer: Ernesto Jardim <ernesto.jardim AT jrc.ec.europa.eu>
